--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
-  runtime: go
-  api_version: go1
+runtime: go
+api_version: go1
 
-  handlers:
-    url: /.*
-    script: _go_app
+handlers:
+- url: /.*
+  script: _go_app
